index changed pages

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no"><meta name="theme-color" content="#000000">
-  <link rel="stylesheet" href="bootstrap.min.css">
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="reset-css.css">
+  <link rel="stylesheet" href="/house-shop/bootstrap.min.css">
+  <link rel="stylesheet" href="/house-shop/style.css">
+  <link rel="stylesheet" href="/house-shop/reset-css.css">
   <link rel="manifest" href="/house-shop/manifest.json">
   <link rel="shortcut icon" href="/house-shop/favicon.ico">
   <title>HouseShop</title>
